# bsync

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  project.md
bsync-cli/: Cargo.toml
bsync-cli/src/: clipboard.rs  gossip.rs  identity.rs  main.rs
bsync-core/: Cargo.toml
bsync-core/src/: lib.rs
bsync-net/: Cargo.toml
bsync-net/src/: lib.rs
bsync-rust/: Cargo.toml
bsync-rust/src/: blobs.rs  clipboard.rs  gossip.rs  identity.rs  lib.rs
bsync-tui/: Cargo.toml
bsync-tui/src/: app.rs  cli.rs  main.rs  ui.rs
