[package]
name = "bsync-cli"
version = "0.1.0"
edition = "2021"
description = "CLI shell for bsync — P2P clipboard sync"

[[bin]]
name = "bsync"
path = "src/main.rs"

[dependencies]
bsync-core = { path = "../bsync-core" }
iroh = "=1.0.0"
iroh-gossip = "=0.101.0"
clipboard-rs = { version = "0.3", features = ["wayland"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros", "io-util", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
blake3 = "1"
serde_json = "1"
futures-lite = "2"
