[package]
name = "bsync-net"
version = "0.1.0"
edition = "2024"
description = "Shared networking layer for bsync — iroh gossip + blobs, platform-agnostic"

[lib]
name = "bsync_net"
path = "src/lib.rs"

[dependencies]
bsync-core = { path = "../bsync-core" }
iroh = "=1.0.0"
iroh-gossip = "=0.101.0"
iroh-blobs = "=0.103.0"
tokio = { version = "1", features = ["sync", "io-util"] }
anyhow = "1"
blake3 = "1"
serde_json = "1"
n0-future = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iroh = { version = "=1.0.0", default-features = false, features = ["tls-ring"] }
iroh-gossip = { version = "=0.101.0", default-features = false, features = ["net"] }
iroh-blobs = { version = "=0.103.0", default-features = false }
