[package]
name = "bsync-rust"
version = "0.1.0"
edition = "2024"
description = "Shared Rust platform I/O for bsync shells (clipboard + filesystem identity)"

[lib]
name = "bsync_rust"
path = "src/lib.rs"

[dependencies]
bsync-core = { path = "../bsync-core" }
iroh-base = { version = "=1.0.0", features = ["key"] }
clipboard-rs = { version = "0.3", features = ["wayland"] }
tokio = { version = "1", features = ["sync", "fs"] }
anyhow = "1"
dirs = "6"
