[package]
name = "bsync-tui"
version = "0.1.0"
edition = "2024"
description = "bsync — P2P clipboard sync (TUI + CLI)"

[[bin]]
name = "bsync"
path = "src/main.rs"

[dependencies]
bsync-core = { path = "../bsync-core" }
bsync-net = { path = "../bsync-net" }
bsync-rust = { path = "../bsync-rust" }
iroh-base = { version = "=1.0.0", features = ["key"] }
clipboard-rs = { version = "0.3", features = ["wayland"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros", "io-util", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-lite = "2"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
